--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -107,13 +107,13 @@ dependencies {
 	providedCompile project(':savedsearch-entities')
 	providedCompile project(':savedsearch-core')  
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5')
-	providedCompile(group: 'javax', name: 'ejb', version: '3.2.0')
+//	providedCompile(group: 'javax', name: 'ejb', version: '3.2.0')
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
-	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1')
-	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
+	providedCompile(group: 'com.oracle.weblogic', name: 'jersey-multipart-1.17.1', version: '12.1.2-0-0')
+	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
 	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0')
 
-	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
+	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12')
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2')
 	
@@ -124,25 +124,25 @@ dependencies {
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')
 	
 	providedCompile(group: 'org.testng', name:'testng', version:'6.8.8')
-	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')
+//	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')
 	
-	providedCompile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
+	providedCompile(group: 'com.jayway.jsonpath', name:'json-path', version:'0.9.1')
 	providedCompile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1')	
+        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')	
 
-	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
+	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.29'
 	restDoc(
-		[group: 'org.codehaus.enunciate', name: 'enunciate-core-rt', version: '1.28'],
-		[group: 'org.codehaus.enunciate', name: 'enunciate-core', version: '1.28'],
-		[group: 'org.codehaus.enunciate', name: 'enunciate-docs', version: '1.28'],
-		[group: 'org.codehaus.enunciate', name: 'enunciate-core-annotations', version: '1.28'],
+		[group: 'org.codehaus.enunciate', name: 'enunciate-core-rt', version: '1.29'],
+		[group: 'org.codehaus.enunciate', name: 'enunciate-core', version: '1.29'],
+		[group: 'org.codehaus.enunciate', name: 'enunciate-docs', version: '1.29'],
+		[group: 'org.codehaus.enunciate', name: 'enunciate-core-annotations', version: '1.29'],
 		[group: 'com.oracle.weblogic', name: 'jersey-core-1.17.1', version: '12.1.2-0-0'],
-		[group: 'com.sun.jersey', name: 'jersey-server', version: '1.17'],
-		[group: 'com.sun.jersey', name: 'jersey-servlet', version: '1.17']		
+		[group: 'com.oracle.weblogic', name: 'jersey-server-1.17.1', version: '12.1.2-0-0'],
+		[group: 'com.oracle.weblogic', name: 'jersey-servlet-1.17.1', version: '12.1.2-0-0']		
 	)
-	ftpAntTask('org.apache.ant:ant-commons-net:1.8.4') {
+	ftpAntTask('org.apache.ant:ant-commons-net:12.1.2-0-0') {
 			module('commons-net:commons-net:1.4.1') {
 				dependencies 'oro:oro:2.0.8:jar'
 			}
