--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -206,8 +206,8 @@ dependencies {
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
 	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0')
         
-    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2')
-    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2')
+    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
+    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
 
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12')
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
@@ -225,15 +225,15 @@ dependencies {
 	providedCompile(group: 'com.jayway.jsonpath', name:'json-path', version:'0.9.1')
 	providedCompile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
-	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1')	
+	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0')
+        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')	
 
 
 lrgConfig project(':savedsearch-web') 
 	lrgConfig project(':savedsearch-entities')
 	lrgConfig project(':savedsearch-core')  
 	lrgConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5')
-	lrgConfig(group: 'javax', name: 'ejb', version: '3.2.0')
+//	lrgConfig(group: 'javax', name: 'ejb', version: '3.2.0')
 	lrgConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
 	lrgConfig(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1')
 	lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
@@ -250,8 +250,8 @@ lrgConfig project(':savedsearch-web')
 	lrgConfig(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')
 
 
- 	lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2')
-        lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2')
+ 	lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
+        lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
 
         providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')	
 
@@ -259,15 +259,15 @@ lrgConfig project(':savedsearch-web')
 	lrgConfig(group: 'org.testng', name:'testng', version:'6.8.8')
 	lrgConfig(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')
 	
-	lrgConfig(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
+	lrgConfig(group: 'com.jayway.restassured', name:'json-path', version:'0.9.1')
 	lrgConfig(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
 	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
-	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-        lrgConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1')
+	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0')
+        lrgConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')
 
 
 
-	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
+	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.29'
 	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.29'
 	restDoc(
 		[group: 'org.codehaus.enunciate', name: 'enunciate-core-rt', version: '1.29'],
