--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -13,20 +13,20 @@ task runDEVTestSuite(type: Test){
 
 
 dependencies {
-	compile project(':savedsearch-entities')
-	testRuntime(group: 'com.oracle.weblogic', name: 'ojdbc6', version: '12.1.2-0-0')
+	compile project(':savedsearch-entities'){transitive = false}
+	testRuntime(group: 'com.oracle.weblogic', name: 'ojdbc6', version: '12.1.2-0-0'){transitive = false}
 	testCompile(group: 'org.testng', name:'testng', version:'6.8.8')
-	compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
-    compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
-	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0')
-	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') 
-	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2')
+	compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
+    compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
+	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0'){transitive = false}
+	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
+	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){transitive = false}
 //	compile(group: 'javax', name: 'ejb', version: '3.2.0')
-//	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8')
-    compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
-    compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12')
-    compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
-    compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2')
+//	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8'){transitive = false}
+    compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
+    compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12'){transitive = false}
+    compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){transitive = false}
+    compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
    }
 
 
