--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -25,30 +25,28 @@ sourceSets {
 			}
 
 dependencies {
-	
 	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
-	compile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3')
-	compile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.2.5')
-	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3')
-	compile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')	
-	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12')
-	compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
-	
-	compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
-	compile(group: 'com.jayway.jsonpath', name: 'json-path', version: '0.9.1')
-	compile(group: 'log4j', name: 'log4j', version:'1.2.16')
-//	compile(group: 'log4j', name: 'log4j', version:'2.0')
-//compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
-//compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
-    compile(group: 'emaas.platform', name: 'registry-client', version: '0.23.6')
-	compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6')    
-	compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0')
-	compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')	
-	compile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')	
-//	compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')	
-	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
+        compile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3')
+        compile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1')
+        compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3')
+        compile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')
+        compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12')
+        compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
 
-	compile(group: 'org.testng', name:'testng', version:'6.8.8')
+        compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
+        compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
+        compile(group: 'log4j', name: 'log4j', version: '1.2.17')
+    compile(group: 'emaas.platform', name: 'registry-client', version: '0.23.6')
+        compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6')
+        compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
+        compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
+        compile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
+        compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')
+        compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
+        compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
+        compile(group: 'org.testng', name:'testng', version:'6.8.8')
+
+
 }
 
 
