--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 	
 	prebuild_log4j 'org.apache.logging.log4j:log4j-core:2.0.1',
                        'org.apache.logging.log4j:log4j-api:2.0.1'
+			'log4j:log4j:1.2.17'
 	prebuild_tenant_sdk 'com.oracle.emaas:emaas-platform-tenant-sdk:0.2'
         prebuild_toplink 'org.eclipse.persistence:eclipselink:2.4.2',
                          'org.eclipse.persistence:javax.persistence:2.0.5'
