--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -5,17 +5,17 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.application/savedsearch-ee"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-core-asl-1.9.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-core-asl-1.9.12.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-jaxrs-1.9.2.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-mapper-asl-1.9.12.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-xc-1.9.2.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-client-1.17.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-core-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-json-1.17.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-multipart-1.17.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-multipart-1.17.1-12.1.2-0-0.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-server-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-servlet-1.17.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.3.4.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/json-path-1.8.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/testng-6.8.8.jar"/>
@@ -42,8 +42,8 @@
 	</classpathentry>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-1.9.0.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-common-2.3.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-api-2.0.2.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-core-2.0.2.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/emaas-platform-tenant-sdk-0.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-api-2.0.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-core-2.0.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/emaas-platform-tenant-sdk-0.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
