--- a/codeCoverage/codeCoverage.gradle
+++ b/codeCoverage/codeCoverage.gradle
@@ -288,10 +288,10 @@ jacoco { enabled = false }}
 
     afterEvaluate {
       // some tasks apply only to projects with java plugin applied.
-      if (project.plugins.hasPlugin('java')) {
+     / *if (project.plugins.hasPlugin('java')) {
         project.jacoco {
           toolVersion = "0.7.2.201409121644"
-        }
+        }*/
 
         jacocoTestReport {
           executionData = fileTree(dir: "${buildDir}/jacoco", include: '**/*.exec')
