--- a/codeCoverage/codeCoverage.gradle
+++ b/codeCoverage/codeCoverage.gradle
@@ -288,8 +288,8 @@ jacoco { enabled = false }}
 
     afterEvaluate {
       // some tasks apply only to projects with java plugin applied.
-     / *if (project.plugins.hasPlugin('java')) {
-        project.jacoco {
+      if (project.plugins.hasPlugin('java')) {
+      /*  project.jacoco {
           toolVersion = "0.7.2.201409121644"
         }*/
 
