--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -59,6 +59,11 @@ maven {
     }
 
 dependencies {
+
+
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy')}	
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}"){transitive = false}	
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils-integ-tests', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
@@ -76,6 +81,25 @@ dependencies {
 	testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 	testConfig(group: 'com.sun.jersey', name: 'jersey-servlet', version: '1.17.1')
 	testConfig('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
+
+
+
+
+	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
+	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){ transitive = false }
+
+	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }	
+ 	testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
+  	testConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
+  	testConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
+        testConfig(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
+
+
+
+
+
+
+
 	 testConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
       exclude group: 'emaas.platform', module: 'registry-lookup-client'
       exclude group: 'emaas.platform', module: 'registry-client'
@@ -129,9 +153,63 @@ include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/widget/WidgetAPI
         useRestAssured=true
 ext.set("testType", "integration")
 }
+   task DEVTest(type:EMTest,dependsOn: QATest){	
+
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
+/*include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/QueryParameterConstantTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/TenantInfoTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/exception/EMAnalyticsFwkExceptionTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/EmAnalyticsObjectUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/exception/EmAnalyticsProcessingExceptionTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/importsearch/FolderDetailsTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/ImportCategoryImplTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/ImportSearchImplTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/LogUtilTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/importsearch/ParameterDetailsTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/SchemaUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/SchemaVersionTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/importsearch/SearchPaurameterDetailsTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionManagerTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.java"*/
 
 
-task emcpssf_l0_test (dependsOn: QATest)
+//include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
+//include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
+include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"
+//include "oracle/sysman/emaas/savedsearch/SearchTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionManagerTestS2.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/EmAnalyticsObjectUtilTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplTest.class"
+//include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/PersistenceManagerTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/QAToolUtilTestS2.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/SchemaUtilTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/LogUtilTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/RegistryLookupUtilTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/TenantSubscriptionUtilTest.class"
+	useRestAssured =true
+ext.set("testType", "unit")
+
+}
+ task WebUtilTest(type:EMTest,dependsOn: DEVTest){
+
+include "oracle/sysman/emaas/platform/savedsearch/property/PropertyReaderTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/services/EMTargetInitializerTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/services/LoggingServiceManagerTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/services/RegistryServiceManagerTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/services/VersionValidationServiceManagerTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/targetmodel/services/SavedSearchStatusTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/wls/lifecycle/AbstractApplicationLifecycleServiceTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/wls/management/AppLoggingManageMXBeanTest.class"
+
+
+useRestAssured =true
+ext.set("testType", "unit")
+}
+
+task emcpssf_l0_test (dependsOn: WebUtilTest)
 if (new File("codeCoverage.gradle").exists()) {
 apply from: "../../codeCoverage/codeCoverage.gradle"
 }
