--- a/tests/suites/emcpssf_l1_test.gradle
+++ b/tests/suites/emcpssf_l1_test.gradle
@@ -50,31 +50,99 @@ maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
 dependencies {
-	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy')}
-	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
-	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}"){transitive = false}
-	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}"){transitive = false}
+
+
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy')}	
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}"){transitive = false}	
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils-integ-tests', version: "${REPO_BID}") {transitive = false}
-	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
+	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5') { transitive = false }
+	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2')  { transitive = false }
+	 testConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){ transitive = false }
+        testConfig(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1'){ transitive = false }
+        testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
+	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
+	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
+  	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
+	testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+	testConfig(group: 'com.sun.jersey', name: 'jersey-servlet', version: '1.17.1')
+	testConfig('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
+
+
+
+
+	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
 	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){ transitive = false }
-	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') { transitive = false }
-	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }
-	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }    	
+
+	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }	
  	testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
   	testConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
   	testConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
-	testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
-	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')
-        testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
         testConfig(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
-	configurations {
-		restAssured.exclude module: "groovy"
+
+
+
+
+
+
+
+	 testConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
+      exclude group: 'emaas.platform', module: 'registry-lookup-client'
+      exclude group: 'emaas.platform', module: 'registry-client'
+  
+	}
+	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
+	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')	 
+	configurations{
+		restAssured.exclude module: 'groovy'
 	}
 }
+ task QATest(type:EMTest){
 
-     task DEVTest(type:EMTest){	
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/json/AppMappingCollectionTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/json/AppMappingEntityTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/category/CategoryAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/json/DomainEntityTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/json/DomainsEntityTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/exception/EMAnalyticsWSExceptionTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/search/FilterSearchAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/folder/FolderAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/HeadersUtilTest.class"
+//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportCategorySetTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/exception/ImportExceptionTest.class"
+//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportFolderSetTest.class"
+//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportSearchSetTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/JsonUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/LoggingConfigAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/LoggingItemsTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/LoggingItemTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/RegistryLookupUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/RemoveHeaderTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/navigation/SavedSearchAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/SavedSearchApplicationTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/SavedSearchCORSFilterTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/search/SearchAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/TenantSubscriptionUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/UpdatedLoggerLevelTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/validationUtilTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/widget/WidgetAPITest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/widget/WidgetGroupAPITest.class"
+
+
+
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/JAXBUtilTestS2.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/widget/WidgetAPIMoreTest.class"
+
+
+        useRestAssured=true
+ext.set("testType", "integration")
+}
+     task DEVTest(type:EMTest,dependsOn: QATest){	
 
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
 /*include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/QueryParameterConstantTest.class"
@@ -95,7 +163,7 @@ include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionMana
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.java"*/
 
 
-include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
+//include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
 //include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
 include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"
 //include "oracle/sysman/emaas/savedsearch/SearchTest.class"
