--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -175,16 +175,16 @@ include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionMana
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.java"
 
 
-include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
+//include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
 include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
 include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"
-include "oracle/sysman/emaas/savedsearch/SearchTest.class"
+//include "oracle/sysman/emaas/savedsearch/SearchTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionManagerTestS2.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/EmAnalyticsObjectUtilTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplTest.class"
-include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/PersistenceManagerTest.class"
+//include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/PersistenceManagerTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/QAToolUtilTestS2.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/SchemaUtilTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/LogUtilTest.class"
