--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -112,16 +112,16 @@ task DEVTest2(type:EMTest,dependsOn: DEVTest){
 task QATest(type:EMTest,dependsOn: DEVTest2){		 
 	options.suiteXmlBuilder().suite('name': 'SSFTest') {
     test('name': 'REST_APITest', 'preserve-order':'true') {
-        classes([:]) {
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.category')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.common')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.exception')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.importsavedsearch')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.navigations')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.search')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.widget')
-		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.offboard') //This class must be run at last		    
+        packages([:]) {
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.category')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.common')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.exception')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.importsavedsearch')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.navigations')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.search')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.widget')
+		'package'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.offboard') //This class must be run at last		    
         }
     }  
     }       
